styled and animated messages

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,2 +1,12 @@
+@import 'partials/fonts';
+@import 'partials/variables';
+@import 'partials/mixins';
+@import 'partials/setup';
+@import 'partials/global';
+@import 'partials/keyframes';
 @import 'partials/datepicker';
 @import 'partials/rc-slider';
+
+@import 'partials/MessageFloatsContainer';
+@import 'partials/MessageFloat';
+
