fixed checkbox logic issue

--- a/dev/styles/partials/_variables.scss
+++ b/dev/styles/partials/_variables.scss
@@ -4,3 +4,7 @@ $messageFontFamily: 'Crimson Text', serif;
 
 $skyColor: #00b4ff;
 $cloudBaseColor: #fff;
+
+$messageColor: black;
+
+$baseUIColor: #ffd000;
