--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -9,4 +9,6 @@
 
 @import 'partials/MessageFloatsContainer';
 @import 'partials/MessageFloat';
+@import 'partials/MessageForm';
+@import 'partials/FilterMenu';
 
