Filter menu styling done.

--- a/dev/styles/partials/_variables.scss
+++ b/dev/styles/partials/_variables.scss
@@ -1,6 +1,7 @@
 $htmlFontSize: 10px;
 
 $messageFontFamily: 'Crimson Text', serif;
+$uiFontFamily: 'Roboto', sans-serif;
 
 $skyColor: #00b4ff;
 $cloudBaseColor: #fff;
