--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -11,4 +11,5 @@
 @import 'partials/MessageFloat';
 @import 'partials/MessageForm';
 @import 'partials/FilterMenu';
+@import 'partials/DatePickerDisplay';
 
