--- a/dev/styles/partials/_FilterMenu.scss
+++ b/dev/styles/partials/_FilterMenu.scss
@@ -1,16 +1,43 @@
+.FilterMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  position: fixed;
+  left: 50%;
+  bottom: 6vh;
+  transform: translate(-50%,0%);
+
+  width: 80%;
+  min-width: 280px;
+  margin: 0 auto;
+  
+  min-height: 70vh;
+
+}
+
+
+
 input[type="checkbox"].FilterMenu__userMessagesOnlyCheckBox {
   visibility: hidden;
 
   & + .FilterMenu__checkboxLabel > .FilterMenu__checkbox {
 
-    display: block;
+    display: inline-block;
+    
 
-    width: 20px;
-    min-height: 20px;
-    background: transparent;
+    width: 3rem;
+    min-height: 3rem;
+    padding: 0;
+    margin: 0;
+    margin-right: 20px;
+
     border: 4px solid $baseUIColor;
     border-radius: 5px;
-
+    background: transparent;
+    
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
   }
 
   
@@ -18,5 +45,89 @@ input[type="checkbox"].FilterMenu__userMessagesOnlyCheckBox {
   &:checked + .FilterMenu__checkboxLabel > .FilterMenu__checkbox {
     background-color: $baseUIColor;
   }
+}
+
+.FilterMenu__labelText {
+  color: $baseUIColor;
+  font-size: 3rem;
+
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.FilterMenu__sentiment {
+  font-size: 3rem;
+
+  & > * {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  &:before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-50%,-110%);
+
+    padding: 0;
+    margin: 0;
+
+    content: '☹️';
+    font-size: 6rem;
+
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  }
+
+  &:after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translate(50%, -110%);
+
+    padding: 0;
+    margin: 0;
+
+    content: '😊';
+    font-size: 6rem;
+
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.FilterMenu__dateRange {
+  font-size: 3rem;
+}
+
+.FilterMenu__dateRange__datePickerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.FilterMenu__dateRange__labelText {
+  display: block;
+
+  padding: 0;
+  margin: 20px auto;
+
+  color: $baseUIColor;
+
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.FilterMenu__submit {
+  color: $cloudBaseColor;
+  background-color: $baseUIColor;
+
+  padding: 20px;
+
+  border: none;
+  border-radius: 5px;
+
+  font-size: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
 }
 
