--- a/dev/styles/partials/_MessageForm.scss
+++ b/dev/styles/partials/_MessageForm.scss
@@ -20,6 +20,7 @@
   border-radius: 5px;
 
   font-size: 3rem;
+  font-family: $uiFontFamily;
 
   transition: all 0.3s;
 
@@ -30,8 +31,12 @@
   }
 
   &:hover {
-    color: $messageColor;
+    color: $skyColor;
     background-color: $cloudBaseColor;
+
+    &::placeholder {
+      color: $skyColor;
+    }
   }
 }
 
