--- a/dev/styles/partials/_datepicker.scss
+++ b/dev/styles/partials/_datepicker.scss
@@ -47,11 +47,11 @@
 
 .react-datepicker {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.8em;
   background-color: #fff;
   color: #000;
   border: 1px solid #aeaeae;
-  border-radius: 0.3rem;
+  border-radius: 0.3em;
   display: inline-block;
   position: relative; }
 
@@ -80,8 +80,8 @@
   text-align: center;
   background-color: #f0f0f0;
   border-bottom: 1px solid #aeaeae;
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
+  border-top-left-radius: 0.3em;
+  border-top-right-radius: 0.3em;
   padding-top: 8px;
   position: relative; }
   .react-datepicker__header--time {
@@ -98,16 +98,16 @@
   margin-top: 0;
   color: #000;
   font-weight: bold;
-  font-size: 0.944rem; }
+  font-size: 0.944em; }
 
 .react-datepicker__navigation {
-  line-height: 1.7rem;
+  line-height: 1.7em;
   text-align: center;
   cursor: pointer;
   position: absolute;
   top: 10px;
   width: 0;
-  border: 0.45rem solid transparent;
+  border: 0.45em solid transparent;
   z-index: 1; }
   .react-datepicker__navigation--previous {
     left: 10px;
@@ -142,7 +142,7 @@
   float: left; }
 
 .react-datepicker__month {
-  margin: 0.4rem;
+  margin: 0.4em;
   text-align: center; }
 
 .react-datepicker__time-container {
@@ -151,7 +151,7 @@
   .react-datepicker__time-container--with-today-button {
     display: inline;
     border: 1px solid #aeaeae;
-    border-radius: .3rem;
+    border-radius: .3em;
     position: absolute;
     right: -72px;
     top: 0; }
@@ -164,7 +164,7 @@
       .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list {
         list-style: none;
         margin: 0;
-        height: calc(195px + (1.7rem / 2));
+        height: calc(195px + (1.7em / 2));
         overflow-y: scroll;
         padding-right: 30px;
         width: 100%; }
@@ -188,14 +188,14 @@
 .react-datepicker__week-number {
   color: #ccc;
   display: inline-block;
-  width: 1.7rem;
-  line-height: 1.7rem;
+  width: 1.7em;
+  line-height: 1.7em;
   text-align: center;
-  margin: 0.166rem; }
+  margin: 0.166em; }
   .react-datepicker__week-number.react-datepicker__week-number--clickable {
     cursor: pointer; }
     .react-datepicker__week-number.react-datepicker__week-number--clickable:hover {
-      border-radius: 0.3rem;
+      border-radius: 0.3em;
       background-color: #f0f0f0; }
 
 .react-datepicker__day-names, .react-datepicker__week {
@@ -205,20 +205,20 @@
 .react-datepicker__day, .react-datepicker__time-name {
   color: #000;
   display: inline-block;
-  width: 1.7rem;
-  line-height: 1.7rem;
+  width: 1.7em;
+  line-height: 1.7em;
   text-align: center;
-  margin: 0.166rem; }
+  margin: 0.166em; }
 
 .react-datepicker__day {
   cursor: pointer; }
   .react-datepicker__day:hover {
-    border-radius: 0.3rem;
+    border-radius: 0.3em;
     background-color: #f0f0f0; }
   .react-datepicker__day--today {
     font-weight: bold; }
   .react-datepicker__day--highlighted {
-    border-radius: 0.3rem;
+    border-radius: 0.3em;
     background-color: #3dcc4a;
     color: #fff; }
     .react-datepicker__day--highlighted:hover {
@@ -228,13 +228,13 @@
     .react-datepicker__day--highlighted-custom-2 {
       color: green; }
   .react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range {
-    border-radius: 0.3rem;
+    border-radius: 0.3em;
     background-color: #216ba5;
     color: #fff; }
     .react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover {
       background-color: #1d5d90; }
   .react-datepicker__day--keyboard-selected {
-    border-radius: 0.3rem;
+    border-radius: 0.3em;
     background-color: #2a87d0;
     color: #fff; }
     .react-datepicker__day--keyboard-selected:hover {
@@ -257,7 +257,7 @@
 .react-datepicker__year-read-view,
 .react-datepicker__month-read-view {
   border: 1px solid transparent;
-  border-radius: 0.3rem; }
+  border-radius: 0.3em; }
   .react-datepicker__year-read-view:hover,
   .react-datepicker__month-read-view:hover {
     cursor: pointer; }
@@ -273,7 +273,7 @@
     margin-left: 20px;
     top: 8px;
     position: relative;
-    border-width: 0.45rem; }
+    border-width: 0.45em; }
 
 .react-datepicker__year-dropdown,
 .react-datepicker__month-dropdown {
@@ -284,7 +284,7 @@
   top: 30px;
   z-index: 1;
   text-align: center;
-  border-radius: 0.3rem;
+  border-radius: 0.3em;
   border: 1px solid #aeaeae; }
   .react-datepicker__year-dropdown:hover,
   .react-datepicker__month-dropdown:hover {
@@ -303,16 +303,16 @@
   margin-right: auto; }
   .react-datepicker__year-option:first-of-type,
   .react-datepicker__month-option:first-of-type {
-    border-top-left-radius: 0.3rem;
-    border-top-right-radius: 0.3rem; }
+    border-top-left-radius: 0.3em;
+    border-top-right-radius: 0.3em; }
   .react-datepicker__year-option:last-of-type,
   .react-datepicker__month-option:last-of-type {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    border-bottom-left-radius: 0.3rem;
-    border-bottom-right-radius: 0.3rem; }
+    border-bottom-left-radius: 0.3em;
+    border-bottom-right-radius: 0.3em; }
   .react-datepicker__year-option:hover,
   .react-datepicker__month-option:hover {
     background-color: #ccc; }
@@ -377,17 +377,17 @@
   z-index: 2147483647; }
   .react-datepicker__portal .react-datepicker__day-name,
   .react-datepicker__portal .react-datepicker__day, .react-datepicker__portal .react-datepicker__time-name {
-    width: 3rem;
-    line-height: 3rem; }
+    width: 3em;
+    line-height: 3em; }
   @media (max-width: 400px), (max-height: 550px) {
     .react-datepicker__portal .react-datepicker__day-name,
     .react-datepicker__portal .react-datepicker__day, .react-datepicker__portal .react-datepicker__time-name {
-      width: 2rem;
-      line-height: 2rem; } }
+      width: 2em;
+      line-height: 2em; } }
   .react-datepicker__portal .react-datepicker__current-month, .react-datepicker__portal .react-datepicker-time__header {
-    font-size: 1.44rem; }
+    font-size: 1.44em; }
   .react-datepicker__portal .react-datepicker__navigation {
-    border: 0.81rem solid transparent; }
+    border: 0.81em solid transparent; }
   .react-datepicker__portal .react-datepicker__navigation--previous {
     border-right-color: #ccc; }
     .react-datepicker__portal .react-datepicker__navigation--previous:hover {
