--- a/dev/styles/partials/_fonts.scss
+++ b/dev/styles/partials/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,700');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Roboto:400,700');
