--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -11,5 +11,6 @@
 @import 'partials/MessageFloat';
 @import 'partials/MessageForm';
 @import 'partials/FilterMenu';
+@import 'partials/LoginIndicator';
 @import 'partials/DatePickerDisplay';
 
