--- a/dev/styles/partials/_FilterMenu.scss
+++ b/dev/styles/partials/_FilterMenu.scss
@@ -1,5 +1,5 @@
 .FilterMenu {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -14,6 +14,10 @@
   margin: 0 auto;
   
   min-height: 70vh;
+
+  &--open {
+    display: flex;
+  }
 
 }
 
