Styled FilterMenuBtn and added logic for FilterMenu logic

--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -13,4 +13,5 @@
 @import 'partials/FilterMenu';
 @import 'partials/LoginIndicator';
 @import 'partials/DatePickerDisplay';
+@import 'partials/FilterMenuBtn';
 
