--- a/dev/styles/partials/_DatePickerDisplay.scss
+++ b/dev/styles/partials/_DatePickerDisplay.scss
@@ -13,4 +13,9 @@
 
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 
+  @include respond-to("medium") {
+    font-size: 1.5rem;
+    padding: 10px;
+  }
+
 }
