--- a/dev/styles/partials/_FilterMenuBtn.scss
+++ b/dev/styles/partials/_FilterMenuBtn.scss
@@ -1,7 +1,8 @@
 .FilterMenuBtn {
   position: absolute;
   bottom: 6vh;
-  left: 2vh;
+  // left: 2vh;
+  left: 2%;
 
   z-index: 3;
 
@@ -16,4 +17,9 @@
   background-color: $baseUIColor;
 
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+  @include respond-to("medium") {
+    font-size: 2rem;
+    padding: 10px;
+  }
 }
