--- a/dev/styles/partials/_LoginIndicator.scss
+++ b/dev/styles/partials/_LoginIndicator.scss
@@ -1,7 +1,8 @@
 .LoginIndicator {
   position: absolute;
   bottom: 6vh;
-  right: 2vh;
+  // right: 2vh;
+  right: 2%;
 
   display: flex;
   flex-direction: column;
@@ -40,7 +41,8 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 
   @include respond-to("medium") {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    width: 40%;
   }
 }
 
@@ -67,5 +69,10 @@
   font-weight: 700;
 
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+  @include respond-to("medium") {
+    font-size: 2rem;
+    padding: 10px;
+  }
 }
 
