--- a/dev/styles/partials/_MessageFloat.scss
+++ b/dev/styles/partials/_MessageFloat.scss
@@ -5,9 +5,6 @@
   display: inline-block;
   position: relative;
 
-  // width: 30%;
-  // min-width: 450px;
-  // max-width: 450px;
   padding: 25px 50px;
   border-radius: 100px;
 
@@ -18,6 +15,11 @@
 
   font-family: $messageFontFamily;
   font-size: 3rem;
+
+  @include respond-to("medium") {
+    padding: 12px 25px;
+    font-size: 1.5rem;
+  }
 
   &:after, &:before {
     position: absolute;
@@ -45,9 +47,5 @@
     top: -49%;
   }
 
-  // & p {
-  //   white-space: nowrap;
-  //   overflow: hidden;
-  //   text-overflow: ellipsis;
-  // }
+
 }
